# rust-syslog-esp32

./: Cargo.toml  README.md  rust-toolchain.toml
examples/: log.rs  rfc5424.rs  write.rs
src/: format.rs  lib.rs
