[package]
name = "esp_syslog"
version = "6.1.0"
authors = [ "Cody Lee <buddylee48@gmail.com>" ]
description = "Send log messages to syslog from ESP32 devices"
license = "MIT"
repository = "https://github.com/platinummonkey/rust-syslog-esp32"
documentation = "https://docs.rs/esp_syslog"
keywords = ["syslog", "logs", "logging", "esp", "esp32"]

[dependencies]
time        = { version = "0.3.5", features = ["local-offset", "formatting"] }
log         = { version = "0.4.20"}
error-chain = { version = "0.12.2", default-features = false }
esp-idf-svc  = { version = "0.51", features = ["espidf"]}

[build-dependencies]
embuild = "=0.31.4"
